Feature-0040: add participant list
